# b-visualiser

./: .gitignore  README.md  TODO.md  index.html
.github/workflows/: deploy.yml
assets/: index-BAFLpHiz.js  index-CXV-35U1.css  index-DaxRLCG6.js  index-DjILjSpJ.css  wasm_engine_bg-B6mfhvfA.wasm  wasm_engine_bg-DaS3i835.wasm
core/: Cargo.toml
core/engine/: Cargo.toml
core/engine/src/: ascii.rs  engine.rs
core/wasm-engine/: Cargo.toml  bacon.toml
core/wasm-engine/src/: wasm-engine.rs
engine/: Cargo.toml
engine/src/: lib.rs
view/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
view-ratatui/: Cargo.toml  some.txt
view-ratatui/src/: app.rs  events.rs  main.rs  state.rs
view-ratatui/src/bytes/: mod.rs  selected_byte_details.rs
view-ratatui/src/files/: file.rs
view-ratatui/src/mouse/: mod.rs  sentinel.rs
view-ratatui/src/ui/: bottom_bar.rs  details_panel.rs  files_panel.rs  hex_panel.rs  mod.rs  search_bar.rs  sentinel.rs
view/src/: App.tsx  index.css
view/src/features/byteDetails/: ByteDetails.tsx
view/src/features/file/: FileView.tsx  FilterBar.tsx  VirtualRender.tsx
view/src/features/filesList/: Files.tsx  Uploader.tsx
view/src/repositories/: fileRepository.ts  fileRepositoryContext.ts
view/src/state/: file.ts  filesState.ts
