[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/wasm-engine.rs"

[dependencies]
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.98", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window'] }
engine = { path = "../engine" }
